syntax = "proto3";

package com.cramium.sdk;
option java_multiple_files = true;
option java_package = "com.cramium.sdk.ac";

message IdentityPublicKey {
  bytes pubkey = 1;
  string source = 2;
}