syntax = "proto3";

package com.cramium.sdk;
option java_multiple_files = true;
option java_package = "com.cramium.activecard";

message SignatureVerificationResult {
  bool valid = 1;
  string reason = 2;
}